finish first part

--- a/cng/vesta-cng.html
+++ b/cng/vesta-cng.html
@@ -48,6 +48,7 @@
                 <div class="header__inner">
                     <div class="header__logo">Lada Vesta CNG</div>
                     <nav class="nav">
+                        <a class="nav__link" href="../index.html">Главная</a>
                         <a class="nav__link" href="#contacts">Контакты</a>
                         <a class="nav__link" href="https://www.youtube.com/channel/UCBAtkrYugLBQjVnlraZb84w">Youtube</a>
                         <a class="nav__link" href="https://vk.com/cng_lada">ВКонтакте</a>
@@ -259,8 +260,7 @@
                             <img class="reviews__photo" src="assets/images/reviews.png" alt="">                        
                             <div class="reviews__text">                            
                                 <p><b>“</b>Всем доброго времени суток! 25.03 Егор Соболев был проездом через Воронеж. Было сделано им на моей Весте: прошивка блока ГБО,и залита двухрежимка. Что не устраивало раньше: - затуп при подъёме в гору на газу, - расход бензина, - переход с бензина на газ(машину подколбашивало), - при обгонах не хватало динамики, Что сейчас (проехал 700 км) - никакого затупа, 5 человек в гору скорость на 5 передаче набирает без особых проблем, - динамика увеличилась в разы (по ощущениям) - трасса крейсерская скорость 120-130 обороты 2900-3100. И всё это за вменяемые деньги. Всё нравится, Егору огромное человеческое спасибо!!! Человечище-красава))<b>”</b></p>                        
-                            </div>                        
-                            <div class="reviews__author"> очередной владелец Lada Vesta CNG</div>                    
+                            </div>                                          
                         </div>                
                     </div>
                     
@@ -268,8 +268,7 @@
                         <div class="reviews__item">                        
                             <div class="reviews__text">                           
                                 <p><b>“</b>Всем привет. У меня веста сng 2018 г. пробег 172000 км., один владелец. Менял одну форсунку на пробеге 160000 на б/у так как новая дорогая. Машиной в общем доволен езжу много экономия на лицо. Первая машина на метане до этого ездил только на пропане. Задумался продовать так как устал от заводского оборудования не обслужиться и всё дорого, а самое главное задолбала дерготня, провалы как будто машину держут с зади и конечно довпрыск бензина. На трассе как черепаха больше сотки ни как, уже ест бензин, экономии уже нет. Вчера приезжал в Казань Егор Соболев. Сделал моей весточке комплекс работ. Перепрошил бензиновый эбу двух режимку на евро 2 и самое главное разблокировал газовый эбу emer, настроил, убрал полностью довпрыск бензина. И моя машина полетела как ракета. Такого я не ожидал чисто на метане, а тяга как на бензине, даже лучше. Машина стала ехать плавно, без дерготни и с норм приёмом. Переход с бензина на газ вообще не чувствуется ни как раньше колбасило минут пять пока не нагреется. Я доволен как ребёнок. Продовать передумал буду ездить дальше. Готовлюсь заменить все форсы на omvl gemini у моих родных пробег не маленький. Более ответственного человека как Егор ещё не встречал. Парень красава. работу свою делает супер и знает, что делает. Много ещё чего подсказал и прокансультировал. На ответы не жадный. Егор большая благодарность от меня. Жалею, что раньше не увидялись. Всем советую и не тяните время. Ездить надо с удовольствием.<b>”</b></p>                       
-                            </div>                        
-                            <div class="reviews__author"> очередной владелец Lada Vesta CNG</div>                    
+                            </div>                                     
                         </div>               
                     </div>            
                 </div>        
@@ -320,7 +319,7 @@
                             </div>
                         
                             <div class="footer__social--content">                            
-                                подписывайтесь:                            
+                                Подписывайтесь:                            
                                 <a href="https://www.youtube.com/channel/UCBAtkrYugLBQjVnlraZb84w" target="_blank">         
                                     <i class="fab fa-youtube"></i>                            
                                 </a>                             
