--- a/index.html
+++ b/index.html
@@ -1,97 +1,253 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="decription">
+	<link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 	<title>Автосервис96 в Екатеринбурге - установка и обслуживание ГБО, установка парктроников</title>
-	<meta name="description" content="Професcиональная установка ГБО на автомобили в ЕКБ, обслуживание ГБО и сопутсвующие услуги.">
+	<meta name="description"
+		content="Професcиональная установка ГБО на автомобили в ЕКБ, обслуживание ГБО и сопутсвующие услуги.">
 	<link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
 	<header class="header">
-		<div class="container flex-menu flex-menu--column flex-menu--center">
+		<div class="container flex-menu header__brightness flex-menu--column flex-menu--center">
 			<h1 class="title header__title">AutoService96 - ремонт и обслуживание ГБО</h1>
 			<nav class="header__nav-menu">
 				<ul class="nav-list">
-					<li class="nav-list__item"><a href="#" class="nav-list__link">Главная</a></li>
-					<li class="nav-list__item"><a href="#" class="nav-list__link">Youtube канал</a></li>
-					<li class="nav-list__item"><a href="#" class="nav-list__link">Гарантия</a></li>
-					<li class="nav-list__item"><a href="#" class="nav-list__link">Контакты</a></li>
+					<li class="nav-list__item"><a href="#" class="nav-list__link nav-list__active">Главная</a></li>
+					<li class="nav-list__item"><a href="https://www.youtube.com/channel/UCBAtkrYugLBQjVnlraZb84w"
+							class="nav-list__link">Youtube канал</a></li>
+					<li class="nav-list__item"><a href="#brends" class="nav-list__link">Марки ГБО</a></li>
+					<li class="nav-list__item"><a href="#price" class="nav-list__link">Цены</a></li>
 				</ul>
 			</nav>
 			<div class="flex-menu header__contact">
 				<a href="tel:+79920248888" class="header__tel">+7 992 024-88-88</a>
-				<a href="https://2gis.ru/ekaterinburg/geo/1267273050426526?m=60.725694%2C56.884852%2F16.04" class="header__address">г.Екатеринбург ул.Табиринская д.47</a>
+				<a href="https://2gis.ru/ekaterinburg/geo/1267273050426526?m=60.725694%2C56.884852%2F16.04"
+					class="header__address">г.Екатеринбург ул.Табиринская д.47</a>
 			</div>
 		</div>
 	</header>
 	<main class="main">
-		
-			<section class="services section">
-				<div class="container">
-					<h2 class="title services__title">Наши услуги</h2>
-					<div class="services__container">
-						<div class="services__item">
-							<img width="100px" src="assets/img/gbo.jpg" alt="газобалонное оборудование" class="services__item-img">
-							<div class="services__footer">
-								<p class="services__item-title">Установка ГБО на автомобили и обслуживание</p>
-								<a class="services__link">Перейти</a>
-							</div>
+
+		<section class="services section section--dark-grey">
+			<div class="container">
+				<h2 class="title title--white services__title">Наши услуги</h2>
+				<div class="services__container">
+					<div class="services__item">
+						<img width="100px" src="assets/img/gbo.jpg" alt="газобалонное оборудование"
+							class="services__item-img">
+						<div class="services__footer">
+							<p class="services__item-title">Установка ГБО на автомобили и обслуживание</p>
+							<a class="services__link" href="#">Перейти</a>
 						</div>
-						<div class="services__item">
-							<img width="100px" src="assets/img/vesta-cng-back.jpg" alt="орнамент vesta cng" class="services__item-img">
-							<div class="services__footer">
-								<p class="services__item-title">Lada Vesta CNG доработка (заводской метан)</p>
-								<a class="services__link">Перейти</a>
-							</div>
+					</div>
+					<div class="services__item">
+						<img width="100px" src="assets/img/vesta-cng-back.jpg" alt="орнамент vesta cng"
+							class="services__item-img">
+						<div class="services__footer">
+							<p class="services__item-title">Lada Vesta CNG доработка (заводской метан)</p>
+							<a class="services__link" href="cng/vesta-cng.html">Перейти</a>
 						</div>
-						<div class="services__item">
-							<img width="100px" src="assets/img/partroniki.jpg" alt="" class="services__item-img">
-							<div class="services__footer">
-								<p class="services__item-title">Установка парктроников</p>
-								<a class="services__link">Перейти</a>
-							</div>
+					</div>
+					<div class="services__item">
+						<img width="100px" src="assets/img/partroniki.jpg" alt="" class="services__item-img">
+						<div class="services__footer">
+							<p class="services__item-title">Установка парктроников</p>
+							<a class="services__link" href="pages/parktronics.html">Перейти</a>
 						</div>
 					</div>
 				</div>
-			</section>
+			</div>
+		</section>
 
+			<div class="container">
+				<h2 class="title services__title">Преимущества ГБО</h2>
+				<div class="section__content container--border-blue">
+					<p>Автомобиль, оснащенный газобаллонной системой выгодно отличается от дизельного или бензинового.
+					</p>
+					<p>Поскольку штатная топливная система сохраняется, машина может ездить на двух видах горючего:
+						бензине и газе. Это дает возможность увеличить пробег без дозаправки. Особенно актуальным этот
+						момент был, когда сеть газовых заправок по стране еще не была так развита. В наши дни количество
+						АГЗС неуклонно растет, и остаться с пустым газовым баллоном уже не страшно. </p>
 
-			<section class="about section">
-				<div class="container">
-					<h2 class="title services__title">О нас</h2>
-					<div class="section__content container--border-blue">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae, vero. Placeat soluta magni blanditiis odio ratione nisi distinctio delectus, ea earum minus quae, ullam ex architecto commodi! Adipisci, officiis assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor deserunt, pariatur at, delectus rem consequatur velit expedita officiis eveniet hic ea laborum blanditiis eos odit, tenetur incidunt totam facere omnis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas iusto recusandae aliquid maiores maxime repellendus, aliquam, illo quae facilis ullam odio numquam eos doloribus ut veritatis. Tenetur, natus optio. Maxime! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quia molestiae laboriosam officia hic tempore dolorem odit blanditiis saepe fugit? Ratione amet ipsum totam perferendis porro incidunt sunt exercitationem id? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, minima, praesentium optio corporis qui asperiores dolore voluptatum fuga voluptatem rem nesciunt harum iste culpa assumenda magnam cupiditate blanditiis alias molestias?</div>
+					<p>Современные комплекты газового оборудования на автомобиле оснащены надежными электронными блоками
+						управления (ЭБУ). Это добавляет надежности газовым системам, поскольку имеется режим
+						самодиагностики. Остаточный объем газа в баллоне также контролируется электроникой. Электроника
+						производит переключение одного вида топлива на другое без участия водителя, в тоже время и для
+						водителя доступно переключение вручную при помощи специальной кнопки, установленной в салоне
+						авто.</p>
 				</div>
-			</section>
+			</div>
+		</section>
 
-			<section class="benefits section">
-				<div class="container">
-					<h2 class="title services__title">Наши преимущества</h2>
-					<div class="section__content container--border-blue">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae, vero. Placeat soluta magni blanditiis odio ratione nisi distinctio delectus, ea earum minus quae, ullam ex architecto commodi! Adipisci, officiis assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor deserunt, pariatur at, delectus rem consequatur velit expedita officiis eveniet hic ea laborum blanditiis eos odit, tenetur incidunt totam facere omnis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas iusto recusandae aliquid maiores maxime repellendus, aliquam, illo quae facilis ullam odio numquam eos doloribus ut veritatis. Tenetur, natus optio. Maxime! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quia molestiae laboriosam officia hic tempore dolorem odit blanditiis saepe fugit? Ratione amet ipsum totam perferendis porro incidunt sunt exercitationem id? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, minima, praesentium optio corporis qui asperiores dolore voluptatum fuga voluptatem rem nesciunt harum iste culpa assumenda magnam cupiditate blanditiis alias molestias?</div>
+
+		<section class="section" id="brends">
+			<div class="container">
+				<h2 class="title services__title">Марки ГБО</h2>
+				<div class="section__content container--border-blue">
+					<p>Мы работаем только с качественным оборудованием от именитых марок:
+					</p>
+					<ul class="list-img">
+						<li class="list-img__item">
+							<p class="list-img__text">BRC - по праву зовется одним из лучших производителей
+								газобаллонного оборудования в мире. Определенно можно сказать, что у них самое умное
+								"железо", газовое оборудование BRC можно поставить практически на любой автомобиль,
+								который считается полностью несовместимым с ГБО. Газобаллонное оборудование BRC
+								обеспечивает нормы выбросов Euro-5, Euro-6. ГБО BRC – мировой лидер в сфере
+								альтернативных видов топлива. Продукцию BRC устанавливают 15 мировых автогигантов. В
+								Европе за 1 год на 8-ми конвейерах переоборудуется около 400000 новых автомобилей.</p>
+							<img class="list-img__img" src="/assets/img/brc2.jpg" alt="Оборудование BRC">
+						</li>
+						<li class="list-img__item">
+							<p class="list-img__text">OMVL - Основанная в 1980 году недалеко от Болоньи (Италия)
+								компания OMVL выросла из небольшой, семейной фирмы в крупнейшего мирового производителя
+								газотопливных систем. Бренд OMVL наряду с BRC, EMER, ZAVOLI, PRINS, VALTEK входит в
+								состав холдинга Westport Fuel Systems.</p>
+							<img class="list-img__img" src="/assets/img/omvl.jpeg" alt="Оборудование BRC">
+						</li>
+						<li class="list-img__item">
+							<p class="list-img__text">GFI - это новый бренд компании M.T.M. (так же в состав данной
+								группы входят такие именитые марки как BRC, Zavoli, Impco). Его история имеет глубокие
+								корни, которые идут от голландских компаний Koltec-Necam и американской Teleflex...
+								родоначальников всех основных идей и концепций ГБО 4-го поколения...
+								<br>
+								На рынке Европы данная система мало известна, так как была разработана и активно
+								применялась на рынках Канады и США, а внедренные технологии и решения в газовых
+								форсунках являются инновационными и уникальными в своем роде. Для соблюдения более
+								жестких норм токсичности выхлопа Европейских наработок было недостаточно и для получения
+								желаемого результата, компания GFI внедрила ряд решений и подходов, о которых до этого
+								никто другой не думал.
+							</p>
+							<img class="list-img__img" src="/assets/img/gfi.jpg" alt="Оборудование BRC">
+						</li>
+						<li class="list-img__item">
+							<p class="list-img__text">Zavoli S.r.l. - это итальянская компания, основанная в городе
+								Cesena (FC) в Италии. Zavoli является одним из мировых лидеров в проектировании,
+								производстве и маркетинге компонентов и систем переоборудования автомобилей для езды на
+								альтернативных видах топлива - метане и сжиженном газе.
+								<br>
+								Продукция Zavoli одна из самых популярных в ЕС среди автомобилистов, которые
+								выбрали газ, как альтернативный, экологически чистый и экономичный вид топлива для
+								своего автомобиля.
+							</p>
+							<img class="list-img__img" src="/assets/img/zavoli.jpg" alt="Оборудование BRC">
+						</li>
+					</ul>
 				</div>
-			</section>
+			</div>
+		</section>
+
+		<section class="about section section--dark-grey section--white-text">
+			<div class="container">
+				<h2 class="title services__title">О нас</h2>
+				<div class="section__content container--border-blue">
+					<div class="benefits section__benefits">
+						<div class="benefits__item">
+
+							<p class="benefits__title"><img src="assets/icons/bag.svg" alt="" class="benefits__img">
+								Опыт</p>
+							<p class="benefits__text">Более 8 лет мы трудимся для того, чтобы заправка автомобиля была
+								для вас более экономичной</p>
+						</div>
+						<div class="benefits__item">
+
+							<p class="benefits__title"><img src="assets/icons/price.svg" alt="" class="benefits__img">
+								Цены</p>
+							<p class="benefits__text">Всегда подберем оптимальное решение для вашего автомобиля и
+								кошелька</p>
+						</div>
+						<div class="benefits__item">
+
+							<p class="benefits__title"><img src="assets/icons/garant.svg" alt="" class="benefits__img">
+								Гарантия</p>
+							<p class="benefits__text">Гарантия 75000 километров или 1 год</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="section" id="price">
+			<div class="container">
+				<h2 class="title services__title">Цены*</h2>
+				<div class="section__content container--border-blue">
+					<table class="table-products">
+						<tr class="table-products__tr">
+							<th class="table-products__th">Количество цилиндров</th>
+							<th class="table-products__th">Стоимость с установкой</th>
+						</tr>
+						<tr class="table-products__tr">
+							<td class="table-products__td">4 цилиндров</td>
+							<td class="table-products__td">от 30000₽</td>
+						</tr>
+						<tr class="table-products__tr">
+							<td class="table-products__td">6 цилиндров</td>
+							<td class="table-products__td">от 37000₽</td>
+						</tr>
+						<tr class="table-products__tr">
+							<td class="table-products__td">8 цилиндров</td>
+							<td class="table-products__td">от 50000₽</td>
+						</tr>
+
+						</tr>
+					</table>
+					<p class="table-products__post-scriptum">* Цены являются ориентировочными, точную цену спрашивайте
+						по телефону</p>
+				</div>
+			</div>
+		</section>
+
+		<section class="section">
+			<div class="container">
+				<h2 class="title services__title">Наш Youtube канал</h2>
+				<div class="section__content container--border-blue youtube-content">
+					<div class="youtube-content__item"><iframe class="iframe-youtube"
+							src="https://www.youtube.com/embed/QfvEcORh4pA" title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe></div>
+					<div class="youtube-content__item"><iframe class="iframe-youtube"
+							src="https://www.youtube.com/embed/-yrXREABJdw" title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe></div>
+					<div class="youtube-content__item"><iframe class="iframe-youtube"
+							src="https://www.youtube.com/embed/dz-F2_Rf2UY" title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe></div>
+				</div>
+			</div>
+		</section>
 	</main>
-	<footer class="footer">
+	<footer class="footer section section--dark-grey section--white-text" id="contact">
 		<div class="container">
 			<h2>Контакты</h2>
 			<div class="flex-menu footer__flex-menu">
 				<div class="map">
-					<script class="apla" type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa9ca3329d71db83294cab5ecddf0ec9055dc079ea7bb46aecfc4820abffca723&amp;width=320&amp;height=240&amp;lang=ru_RU&amp;scroll=true"></script></div>
+					<script class="apla" type="text/javascript" charset="utf-8" async
+						src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa9ca3329d71db83294cab5ecddf0ec9055dc079ea7bb46aecfc4820abffca723&amp;width=320&amp;height=240&amp;lang=ru_RU&amp;scroll=true"></script>
+				</div>
 				<div class="footer__contact-container">
 
 					<p class="footer__address">г.Екатеринбург ул.Табиринская д.47</p>
 					<a href="tel:+79920248888" class="footer__tel">+7 992 024-88-88</a>
 					<ul class="social-list">
-						<li class="social-list__item"><a href="" class="social-list__link"><img src="assets/img/youtube-icon.png" alt=""></a></li>
-						<li class="social-list__item"><a href="" class="social-list__link"><img src="assets/img/vk-icon.png" alt=""></a></li>
-						<li class="social-list__item"><a href="" class="social-list__link"><img src="assets/img/whats-icon.png" alt=""></a></li>
+						<li class="social-list__item"><a href="" class="social-list__link"><img
+									src="assets/img/youtube-icon.png" alt=""></a></li>
+						<li class="social-list__item"><a href="" class="social-list__link"><img
+									src="assets/img/vk-icon.png" alt=""></a></li>
+						<li class="social-list__item"><a href="" class="social-list__link"><img
+									src="assets/img/whats-icon.png" alt=""></a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
 	</footer>
 </body>
+
 </html>
