fix link on partronics page

--- a/pages/parktronics.html
+++ b/pages/parktronics.html
@@ -44,7 +44,7 @@
 						<img width="100px" src="../assets/img/partroniki.jpg" alt="" class="services__item-img">
 						<div class="services__footer">
 							<p class="services__item-title">Установка парктроников</p>
-							<a class="services__link" href="pages/parktronics.html">Перейти</a>
+							<a class="services__link" href="#">Перейти</a>
 						</div>
 					</div>
 					<div class="services__item">
