--- a/pages/parktronics.html
+++ b/pages/parktronics.html
@@ -30,7 +30,7 @@
 			<div class="flex-menu header__contact">
 				<a href="tel:+79920248888" class="header__tel">+7 992 024-88-88</a>
 				<a href="https://2gis.ru/ekaterinburg/geo/1267273050426526?m=60.725694%2C56.884852%2F16.04"
-					class="header__address">г.Екатеринбург ул.Табиринская д.47</a>
+					class="header__address">г.Екатеринбург ул.Таборинская д.47</a>
 			</div>
 		</div>
 	</header>
@@ -212,7 +212,7 @@
 				</div>
 				<div class="footer__contact-container">
 
-					<p class="footer__address">г.Екатеринбург ул.Табиринская д.47</p>
+					<p class="footer__address">г.Екатеринбург ул.Таборинская д.47</p>
 					<a href="tel:+79920248888" class="footer__tel">+7 992 024-88-88</a>
 					<ul class="social-list">
 						<li class="social-list__item"><a href="" class="social-list__link"><img
